test/libsolidity/syntaxTests/pragma/invalid_range_operator_range_second.sol
pragma solidity 0.8.17 - >0.8.20;
// ----
// ParserError 1684: (0-33): Invalid version pragma. You cannot use operators (<, <=, >=, >, ^) with version ranges (-).